<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">锁屏君</string>
    <string name="lock_text_right">向右滑动解锁</string>
    <string name="lock_text_up">向上滑动解锁</string>
    <string name="lock_text_upload">滑动进度条解锁</string>
    <string name="lock_text_envolope">点击装备飞机，然后向上拖动飞机</string>
    <string name="lock_text_check">听说三点连成一个勾，试试</string>
    <string name="lock_text_box">看见那条绳子了吗，向右拉动它</string>
    <string name="lock_text_mark">按压屏幕解锁</string>
    <string name="time_format">HH:mm</string>
    <string name="date_format">MM月dd日 EEEE</string>
    <string name="action_settings">Settings</string>
    <string name="default_lottie">programming.json</string>
    <string name="upload_lottie">upload.json</string>
    <string name="envelope_lottie">envelope.json</string>
    <string name="check_lottie">check.json</string>
    <string name="giftbox_lottie">giftbox.json</string>
    <string name="mark_lottie">mark.json</string>
    <string name="check_lottiejson1">{\"v\":\"5.5.7\",\"fr\":25,\"ip\":0,\"op\":100,\"w\":100,\"h\":100,\"nm\":\"Композиция 1\",\"ddd\":0,\"assets\":[],\"layers\":[{\"ddd\":0,\"ind\":1,\"ty\":4,\"nm\":\"Слой-фигура 1\",\"sr\":1,\"ks\":{\"o\":{\"a\":0,\"k\":100,\"ix\":11},\"r\":{\"a\":0,\"k\":0,\"ix\":10},\"p\":{\"a\":0,\"k\":[72.278,40.966,0],\"ix\":2},\"a\":{\"a\":0,\"k\":[22.278,-2.784,0],\"ix\":1},\"s\":{\"a\":0,\"k\":[100,100,100],\"ix\":6}},\"ao\":0,\"shapes\":[{\"ty\":\"gr\",\"it\":[{\"ind\":0,\"ty\":\"sh\",\"ix\":1,\"ks\":{\"a\":0,\"k\":{\"i\":[[0,0],[0,0],[0,0]],\"o\":[[0,0],[0,0],[0,0]],\"v\":[[</string>
    <string name="check_lottiejson3">],[</string>
    <string name="check_lottiejson5">],[</string>
    <string name="check_lottiejson7">]],\"c\":false},\"ix\":2},\"nm\":\"Контур 1\",\"mn\":\"ADBE Vector Shape - Group\",\"hd\":false},{\"ty\":\"rd\",\"nm\":\"Скругленные углы 1\",\"r\":{\"a\":0,\"k\":5,\"ix\":1},\"ix\":2,\"mn\":\"ADBE Vector Filter - RC\",\"hd\":false},{\"ty\":\"tm\",\"s\":{\"a\":1,\"k\":[{\"i\":{\"x\":[1],\"y\":[1]},\"o\":{\"x\":[0.167],\"y\":[0]},\"t\":1,\"s\":[0]},{\"i\":{\"x\":[0.833],\"y\":[0.833]},\"o\":{\"x\":[0.167],\"y\":[0.167]},\"t\":27,\"s\":[0]},{\"i\":{\"x\":[0.667],\"y\":[1]},\"o\":{\"x\":[0.167],\"y\":[0]},\"t\":47,\"s\":[0]},{\"i\":{\"x\":[0.897],\"y\":[1]},\"o\":{\"x\":[0.333],\"y\":[0]},\"t\":74,\"s\":[0]},{\"t\":96,\"s\":[91]}],\"ix\":1},\"e\":{\"a\":1,\"k\":[{\"i\":{\"x\":[0.833],\"y\":[0.906]},\"o\":{\"x\":[0.333],\"y\":[0]},\"t\":1,\"s\":[1]},{\"i\":{\"x\":[0.667],\"y\":[1]},\"o\":{\"x\":[0.167],\"y\":[6.667]},\"t\":27,\"s\":[93]},{\"i\":{\"x\":[0.667],\"y\":[1.364]},\"o\":{\"x\":[0.333],\"y\":[0]},\"t\":47,\"s\":[93]},{\"t\":62,\"s\":[93]}],\"ix\":2},\"o\":{\"a\":0,\"k\":0,\"ix\":3},\"m\":1,\"ix\":3,\"nm\":\"Обрезать контуры 1\",\"mn\":\"ADBE Vector Filter - Trim\",\"hd\":false},{\"ty\":\"st\",\"c\":{\"a\":0,\"k\":[1,1,1,1],\"ix\":3},\"o\":{\"a\":0,\"k\":100,\"ix\":4},\"w\":{\"a\":0,\"k\":10,\"ix\":5},\"lc\":2,\"lj\":2,\"bm\":0,\"nm\":\"Обводка 1\",\"mn\":\"ADBE Vector Graphic - Stroke\",\"hd\":false},{\"ty\":\"tr\",\"p\":{\"a\":0,\"k\":[0,-9],\"ix\":2},\"a\":{\"a\":0,\"k\":[0,0],\"ix\":1},\"s\":{\"a\":1,\"k\":[{\"i\":{\"x\":[0.667,0.667],\"y\":[1,1]},\"o\":{\"x\":[0.333,0.333],\"y\":[0,0]},\"t\":33,\"s\":[100,100]},{\"i\":{\"x\":[0.667,0.667],\"y\":[1,1]},\"o\":{\"x\":[0.333,0.333],\"y\":[0,0]},\"t\":39,\"s\":[105,105]},{\"i\":{\"x\":[0.667,0.667],\"y\":[1,1]},\"o\":{\"x\":[0.333,0.333],\"y\":[0,0]},\"t\":45,\"s\":[97,97]},{\"i\":{\"x\":[0.667,0.667],\"y\":[1,1]},\"o\":{\"x\":[0.333,0.333],\"y\":[0,0]},\"t\":51,\"s\":[102,102]},{\"i\":{\"x\":[0.667,0.667],\"y\":[1,1]},\"o\":{\"x\":[0.333,0.333],\"y\":[0,0]},\"t\":58,\"s\":[97,97]},{\"i\":{\"x\":[0.667,0.667],\"y\":[1,1]},\"o\":{\"x\":[0.333,0.333],\"y\":[0,0]},\"t\":64,\"s\":[105,105]},{\"t\":70,\"s\":[100,100]}],\"ix\":3},\"r\":{\"a\":0,\"k\":0,\"ix\":6},\"o\":{\"a\":1,\"k\":[{\"i\":{\"x\":[0.667],\"y\":[1]},\"o\":{\"x\":[0.333],\"y\":[0]},\"t\":0,\"s\":[0]},{\"i\":{\"x\":[0.667],\"y\":[1]},\"o\":{\"x\":[0.333],\"y\":[0]},\"t\":1,\"s\":[100]},{\"i\":{\"x\":[0.667],\"y\":[1]},\"o\":{\"x\":[0.333],\"y\":[0]},\"t\":96,\"s\":[100]},{\"t\":100,\"s\":[0]}],\"ix\":7},\"sk\":{\"a\":0,\"k\":0,\"ix\":4},\"sa\":{\"a\":0,\"k\":0,\"ix\":5},\"nm\":\"Преобразовать\"}],\"nm\":\"Фигура 1\",\"np\":5,\"cix\":2,\"bm\":0,\"ix\":1,\"mn\":\"ADBE Vector Group\",\"hd\":false}],\"ip\":0,\"op\":250,\"st\":0,\"bm\":0},{\"ddd\":0,\"ind\":2,\"ty\":1,\"nm\":\"Сплошная заливка Средне-Зеленый 1\",\"sr\":1,\"ks\":{\"o\":{\"a\":0,\"k\":100,\"ix\":11},\"r\":{\"a\":0,\"k\":0,\"ix\":10},\"p\":{\"a\":0,\"k\":[50,50,0],\"ix\":2},\"a\":{\"a\":0,\"k\":[50,50,0],\"ix\":1},\"s\":{\"a\":0,\"k\":[100,100,100],\"ix\":6}},\"ao\":0,\"sw\":100,\"sh\":100,\"sc\":\"#64c869\",\"ip\":0,\"op\":250,\"st\":0,\"bm\":0}],\"markers\":[]}</string>
    <string name="welcome">Welcome to</string>
    <string name="welcome_jump_btn">跳过</string>
    <string name="preview_direction_message">请选择预览的解锁方式</string>
    <string name="set_lottie_dialog_message">确定要设置为锁屏动画吗</string>
    <string name="choose__direction_message">请选择锁屏的解锁方式</string>
    <string name="set_positive_btn">确定</string>
    <string name="set_negative_btn">取消</string>
    <string name="choose_direction_btn_right">向右滑动</string>
    <string name="choose_direction_btn_up">向上滑动</string>
    <string name="choose_direction_btn_interaction">手势交互</string>
    <string name="preview_activity_error_open">没有正确打开文件管理器</string>
    <string name="about_text_view">关于</string>
    <string name="about_version_view">V 1.0.0</string>
    <string name="about_author_text">开发者：</string>
    <string name="author_names">涂成  王利国  张泽华</string>
    <string name="change_to_setting_text">是否去设置页面关闭系统锁屏?</string>
    <string name="change_drawer_layout_setting">设置</string>
    <string name="change_drawer_layout_about">关于</string>
</resources>
